src/scss/emojiList.scss
.emoji-list {

  .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    :only-child {
      display: flex;
      flex-direction: column;
      align-content: space-evenly;
    }
  }

  //padding top affects text pos margin top moves whole element
  @each $name in "Chutes" "Fletcher" "Marie" "Vortex" {
    .#{$name} {
      .pic {
        background: url(./../Assets/omo/#{$name}.png) no-repeat left top;
        background-size: contain;
        width: 200px;
        height: 200px;
        flex-shrink: 0;
        perspective: 1000px;
      }
    }
  }
  //TODO: colors to match the category at omhof
  @each $name in "album" "artist" "heritage" "hof" {
    .#{$name} {
      .pic {
        background: url(./../Assets/omhof/#{$name}.png) no-repeat left top;
        background-size: contain;
        width: 175px;
        height: 175px;
        flex-shrink: 0;
        perspective: 1000px;
      }
    }
  }

  .item {
    align-items: center;
    background-size: contain;
    display: flex;
    justify-content: space-between;
    opacity: 0;
    overflow: hidden;
    margin: 25px 80px;
    transform: rotateX(-90deg);
    transition: all 0.5s cubic-bezier(.36,-0.64,.34,1.76);

    .label {
      text-align: center;
      overflow: hidden;
    }
  }

  .item > * {
    font-size: 48px;
  }

  .album {
    color: rgb(146, 146, 156);
  }

  .artist {
    color: #4062a7;
  }

  .heritage {
    color: #736197;
  }

  .hof {
    color: #916f3e;
  }

  .solo {
    display: flex;
    flex-direction: column;
    margin: 0 15px;
    .label {
      order: -1;
      font-size: 95px;
      letter-spacing: 0.1px;
    }

    .pic {
      width: 400px;
      height: 400px;
    }

    h1 {
      font-size: 95px;
      letter-spacing: 0.1px;
    }
  }

  .reveal {
    opacity: 1;
    transform: none;
    transition: all 0.5s cubic-bezier(.36,-0.64,.34,1.76);
  }
}

